--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ a {
 .service {
   background-color: #EDF2EC;
   padding-bottom: 121px;
+  margin-bottom: 40px;
 }
 
 .service-header {
@@ -224,4 +225,129 @@ a {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+}
+
+.prices {
+  margin-bottom: 115px;
+}
+
+.prices-inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.prices__title,
+.prices-help__title {
+  margin: 0;
+}
+
+.prices__title {
+  margin-bottom: 60px;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.prices-accourdion {
+  border-radius: 20px;
+  border: 1px solid #E3E1D5;
+  padding: 34px 41px;
+}
+
+.prices-accourdion__details {
+  border-radius: 20px;
+  background-color: #EDF2EC;
+  padding: 16px 40px;
+  width: 250px;
+}
+
+.prices-accourdion__details+.prices-accourdion__details {
+  margin-top: 32px;
+}
+
+.prices-accourdion__summary {
+  list-style: none;
+  background-image: url("../assets/prices-accordion_btn_open.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.prices-accourdion__details[open] {
+  background-color: #D6E7D2;
+}
+
+.prices-accourdion__details[open] .prices-accourdion__summary {
+  background-image: url("../assets/prices-accordion_btn_close.png");
+}
+
+.prices-accourdion__description {
+  margin-top: 12px;
+  margin-bottom: 6px;
+  padding-top: 6px;
+  border-top: 1px solid #AEA1A1;
+  color: #717171;
+  font-size: 10px;
+  font-weight: 300;
+  line-height: 10px;
+}
+
+.prices-accourdion__price {
+  margin-bottom: 12px;
+  color: #000;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.prices-accourdion__price span {
+  color: #E06733;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.prices-accourdion__btn {
+  padding: 3px 20px;
+  color: #717171;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  border-radius: 10px;
+  background-color: #FFF;
+  border: none;
+}
+
+.prices-help__title {
+  margin-bottom: 38px;
+  max-width: 452px;
+  text-align: right;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 50px
+}
+
+.prices-help__title_color_green {
+  color: #499A18;
+  /* prices-accordion_btn_open */
+}
+
+.prices-link__contact {
+  display: block;
+  width: 162px;
+  margin-left: auto;
+  margin-bottom: 38px;
+  padding: 12px 32px;
+  text-align: center;
+  color: #E06733;
+  font-family: Inika;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: normal;
+  border-radius: 5px;
+  border: 1px solid #E06733;
+}
+
+.prices__img {
+  margin-left: 64%;
 }
