--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   font-weight: 400;
 }
 
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -25,7 +29,8 @@ a {
 
 .container {
   margin: 0 auto;
-  max-width: 1220px;
+  max-width: 1240px;
+  padding: 0 10px;
 }
 
 .header {
@@ -74,6 +79,14 @@ a {
 
 .welcome-content {
   max-width: 549px;
+}
+
+.welcome-photo {
+  /* margin: 0 auto; */
+}
+
+.welcome__img {
+  width: 100%;
 }
 
 .welcome-content__title {
@@ -391,7 +404,6 @@ a {
   margin: 0;
   padding: 5px 35px 5px 35px;
   max-width: 100%;
-  /* background-color: #C1E698; */
   background-color: #D6E7D2;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   ;
@@ -480,7 +492,7 @@ a {
 }
 
 .contact__img {
-  margin: 0;
+  vertical-align: bottom;
 }
 
 .footer {
@@ -508,6 +520,7 @@ a {
 
 .footer-social {
   display: flex;
+  transform: translateY(10px);
 }
 
 .footer-social__item+.footer-social__item {
