--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -25,6 +26,16 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.overlay {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
@@ -55,7 +66,7 @@ a {
 .menu-burger {
   display: none;
   position: relative;
-  z-index: 3;
+  z-index: 5;
   width: 40px;
   height: 24px;
 }
@@ -106,6 +117,11 @@ a {
 .menu__item:hover {
   color: #E06733;
   transition: all .5s;
+}
+
+.menu__link {
+  display: block;
+  width: 100%;
 }
 
 .welcome {
@@ -900,6 +916,24 @@ a {
 }
 
 @media (max-width: 550px) {
+  .header__inner {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    padding: 26px 20px;
+    width: 100%;
+    background-color: rgba(234, 229, 229, 0.5);
+  }
+
+  .overlay__active {
+    display: block;
+  }
+
+  .body-menu__active {
+    overflow: hidden;
+  }
+
   .menu {
     height: 100%;
     margin: auto 0;
@@ -915,13 +949,12 @@ a {
     margin: 0;
     padding-top: 40%;
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     right: 0;
     top: -100vh;
     height: 100vh;
     width: 70vw;
-    border-radius: 20px 0 0 0;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     background-color: #EDF2EC;
     transition: all .5s;
   }
@@ -958,6 +991,7 @@ a {
 
   .welcome {
     display: block;
+    padding-top: 160px;
   }
 
   .welcome-content {
